# bangumi-data-analyst-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  schemas.py
app/agents/: backend.py  models.py  placeholders.py  prompts.py  service.py  tools.py
app/analysis/: season_gap.py
app/api/: routes_agents.py  routes_analysis.py  routes_chat.py
app/artifacts/: files.py  plotting.py
app/bangumi/: client.py
app/chat/: __init__.py  service.py
app/core/: config.py
frontend/static/: app.js  styles.css
frontend/templates/: index.html
scripts/: run_agent_seasonal.py  run_spike.py
tests/: test_analysis.py
