[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proj2-bangumi-analyst"
version = "0.1.0"
description = "Bangumi Anime Reception Analyst for IEOR 4576 Project 2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "matplotlib>=3.9.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "openai-agents>=0.2.0",
  "litellm>=1.46.0",
  "google-cloud-aiplatform>=1.148.0",
  "google-auth>=2.49.2",
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
